--- a/trunk whitestaruml-code-0/staruml/components/parser-core/ParserCore/Properties/Resources.resx
+++ b/trunk whitestaruml-code-0/staruml/components/parser-core/ParserCore/Properties/Resources.resx
@@ -119,24 +119,24 @@
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="AttrExpr" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\dependencies\AttrExpr.egt;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\Resources\AttrExpr.egt;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="MsgExpr" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\dependencies\MsgExpr.egt;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\Resources\MsgExpr.egt;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="NameExpr" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\dependencies\NameExpr.egt;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="ObjExpr" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\dependencies\ObjExpr.egt;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\Resources\ObjExpr.egt;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="OperExpr" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\dependencies\OperExpr.egt;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\Resources\OperExpr.egt;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="RoleExpr" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\dependencies\RoleExpr.egt;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\Resources\RoleExpr.egt;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="TransExpr" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\dependencies\TransExpr.egt;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\Resources\TransExpr.egt;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
