--- a/trunk whitestaruml-code-0/staruml/components/parser-core/ParserCore/Properties/Resources.resx
+++ b/trunk whitestaruml-code-0/staruml/components/parser-core/ParserCore/Properties/Resources.resx
@@ -125,7 +125,7 @@
     <value>..\Resources\MsgExpr.egt;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="NameExpr" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\dependencies\NameExpr.egt;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\Resources\NameExpr.egt;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="ObjExpr" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ObjExpr.egt;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
